test/bad/functions/call06.px

func f(x: Int) def
    return

f(x=false)
